--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "author": "Donovan Preston",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@types/node": "^22.8.6",
     "chokidar": "^3.5.3",
     "esbuild": "^0.19.12"
   },
   "dependencies": {
-    "object-path":"^0.11.8",
-    "morphdom": "^2.7.2"
+    "morphdom": "^2.7.2",
+    "object-path": "^0.11.8"
   }
 }
