--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "morphdom": "^2.7.2",
-    "object-path": "^0.11.8"
+    "object-path": "^0.11.8",
+    "mumulib": "file:src"
   }
 }
