--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "author": "Donovan Preston",
   "license": "MIT",
   "devDependencies": {
+    "@playwright/test": "^1.49.1",
     "@types/morphdom": "^2.3.0",
     "@types/node": "^22.8.6",
     "@types/object-path": "^0.11.4",
@@ -40,6 +41,7 @@
   },
   "dependencies": {
     "morphdom": "^2.7.2",
-    "object-path": "^0.11.8"
+    "object-path": "^0.11.8",
+    "playwright": "^1.49.1"
   }
 }
