--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,9 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "module": "ESNext",
-    "target": "ES2020"
+    "module": "NodeNext",
+    "target": "ES2020",
+    "moduleResolution": "nodenext"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
