--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -25,3 +25,11 @@ jobs:
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Publish to pypi
+        run: |
+          python -m pip install --upgrade build twine
+          cd python && python -m build && twine upload dist/*
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
