See if I can fix npm publish

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -11,10 +11,10 @@ jobs:
 
     steps:
       - name: Check out repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
           node-version: '20'
 
@@ -22,6 +22,7 @@ jobs:
         run: make build
 
       - name: Publish to npm
+        run: npm ci
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
