--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "mumulib"
-version = "1.0.15"
+version = "1.0.16"
 authors = [
   { name="Donovan Preston", email="46048+fzzzy@users.noreply.github.com" },
 ]
@@ -13,10 +13,10 @@ readme = "README.md"
 requires-python = ">=3.12"
 classifiers = [
     "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
-license = "MIT"
-license-files = ["LICEN[CS]E*"]
+license = {file = "LICENSE"}
 
 [project.urls]
 Homepage = "https://github.com/fzzzy/mumulib"
