--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools >= 77.0.3", "coverage", "lxml"]
+requires = ["setuptools >= 77.0.3", "aiofiles", "coverage", "lxml"]
 build-backend = "setuptools.build_meta"
 
 [project]
