--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools >= 77.0.3", "aiofiles", "coverage", "lxml"]
+requires = ["setuptools >= 77.0.3"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -11,12 +11,21 @@ authors = [
 description = "There is no library, squared"
 readme = "README.md"
 requires-python = ">=3.12"
+dependencies = [
+    "aiofiles>=24.1.0",
+    "lxml>=5.3.0",
+]
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
 license = {file = "LICENSE"}
+
+[project.optional-dependencies]
+dev = [
+    "coverage>=7.6.9",
+]
 
 [project.urls]
 Homepage = "https://github.com/fzzzy/mumulib"
